objects/Inclusion_Details__c.object
<CustomObject>
    <fields>
        <fullName>Days_since_assigned_to_agent__c</fullName>
        <formula>CASE(MOD( Date_Assigned_to_Agent__c - DATE(1985,6,24),7), 
0 , CASE( MOD( TODAY()  - Date_Assigned_to_Agent__c,7),1,2,2,3,3,4,4,5,5,5,6,5,1), 
1 , CASE( MOD( TODAY() - Date_Assigned_to_Agent__c,7),1,2,2,3,3,4,4,4,5,4,6,5,1), 
2 , CASE( MOD( TODAY() - Date_Assigned_to_Agent__c,7),1,2,2,3,3,3,4,3,5,4,6,5,1), 
3 , CASE( MOD( TODAY() - Date_Assigned_to_Agent__c,7),1,2,2,2,3,2,4,3,5,4,6,5,1), 
4 , CASE( MOD( TODAY() - Date_Assigned_to_Agent__c,7),1,1,2,1,3,2,4,3,5,4,6,5,1), 
5 , CASE( MOD( TODAY() - Date_Assigned_to_Agent__c,7),1,0,2,1,3,2,4,3,5,4,6,5,0), 
6 , CASE( MOD( TODAY() - Date_Assigned_to_Agent__c,7),1,1,2,2,3,3,4,4,5,5,6,5,0), 
999) 
+ 
(FLOOR(( TODAY() - Date_Assigned_to_Agent__c)/7)*5) - 1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This shows the business days since the P3 was assigned to a agent.</inlineHelpText>
        <label>Days since assigned to agent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_since_last_MASI_followup__c</fullName>
        <formula>CASE(MOD( Date_of_last_P3_follow_up__c - DATE(1985,6,24),7), 
0 , CASE( MOD( Today() -  Date_of_last_P3_follow_up__c ,7),1,2,2,3,3,4,4,5,5,5,6,5,1), 
1 , CASE( MOD( Today() - Date_of_last_P3_follow_up__c ,7),1,2,2,3,3,4,4,4,5,4,6,5,1), 
2 , CASE( MOD( Today() - Date_of_last_P3_follow_up__c ,7),1,2,2,3,3,3,4,3,5,4,6,5,1), 
3 , CASE( MOD( Today() - Date_of_last_P3_follow_up__c ,7),1,2,2,2,3,2,4,3,5,4,6,5,1), 
4 , CASE( MOD( Today() - Date_of_last_P3_follow_up__c ,7),1,1,2,1,3,2,4,3,5,4,6,5,1), 
5 , CASE( MOD( Today() - Date_of_last_P3_follow_up__c ,7),1,0,2,1,3,2,4,3,5,4,6,5,0), 
6 , CASE( MOD( Today() - Date_of_last_P3_follow_up__c ,7),1,1,2,2,3,3,4,4,5,5,6,5,0), 
999) 
+ 
(FLOOR(( Today() - Date_of_last_P3_follow_up__c )/7)*5)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days since last MASI followup</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_since_last_P3_follow_up__c</fullName>
        <formula>CASE(MOD( Date_of_last_P3_follow_up__c- DATE(1985,6,24),7), 
  0 , CASE( MOD( Today()- Date_of_last_P3_follow_up__c,7),1,2,2,3,3,4,4,5,5,5,6,5,1), 
  1 , CASE( MOD( Today()- Date_of_last_P3_follow_up__c,7),1,2,2,3,3,4,4,4,5,4,6,5,1), 
  2 , CASE( MOD( Today()- Date_of_last_P3_follow_up__c,7),1,2,2,3,3,3,4,3,5,4,6,5,1), 
  3 , CASE( MOD( Today()- Date_of_last_P3_follow_up__c,7),1,2,2,2,3,2,4,3,5,4,6,5,1), 
  4 , CASE( MOD( Today()- Date_of_last_P3_follow_up__c,7),1,1,2,1,3,2,4,3,5,4,6,5,1), 
  5 , CASE( MOD( Today()- Date_of_last_P3_follow_up__c,7),1,0,2,1,3,2,4,3,5,4,6,5,0), 
  6 , CASE( MOD( Today()- Date_of_last_P3_follow_up__c,7),1,1,2,2,3,3,4,4,5,5,6,5,0), 
  999) 
  + 
  (FLOOR(( Today()- Date_of_last_P3_follow_up__c)/7)*5)-1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is the business days since the last P3 follow up</inlineHelpText>
        <label>Days since last MASI follow up</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_since_no_response_comm_created__c</fullName>
        <formula>TODAY()- Inclusion_no_response_letter_email_sent__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days since no response comm created</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_taken_to_complete_a_P3__c</fullName>
        <formula>CASE(MOD(  P3_received_date__c- DATE(1985,6,24),7), 
  0 , CASE( MOD( P3_COMPLETE__c -  P3_received_date__c,7),1,2,2,3,3,4,4,5,5,5,6,5,1), 
  1 , CASE( MOD( P3_COMPLETE__c -  P3_received_date__c,7),1,2,2,3,3,4,4,4,5,4,6,5,1), 
  2 , CASE( MOD( P3_COMPLETE__c -  P3_received_date__c,7),1,2,2,3,3,3,4,3,5,4,6,5,1), 
  3 , CASE( MOD( P3_COMPLETE__c -  P3_received_date__c,7),1,2,2,2,3,2,4,3,5,4,6,5,1), 
  4 , CASE( MOD( P3_COMPLETE__c -  P3_received_date__c,7),1,1,2,1,3,2,4,3,5,4,6,5,1), 
  5 , CASE( MOD( P3_COMPLETE__c -  P3_received_date__c,7),1,0,2,1,3,2,4,3,5,4,6,5,0), 
  6 , CASE( MOD( P3_COMPLETE__c -  P3_received_date__c,7),1,1,2,2,3,3,4,4,5,5,6,5,0), 
  999) 
  + 
  (FLOOR(( P3_COMPLETE__c -  P3_received_date__c)/7)*5) - 1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is the business days between when a P3 was received and when it was completed</inlineHelpText>
        <label>Days taken to complete a MASI</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_taken_to_screen_P3__c</fullName>
        <formula>CASE(MOD(  P3_received_date__c- DATE(1985,6,24),7), 
  0 , CASE( MOD( Date_P3_Screened__c - P3_received_date__c,7),1,2,2,3,3,4,4,5,5,5,6,5,1), 
  1 , CASE( MOD( Date_P3_Screened__c - P3_received_date__c,7),1,2,2,3,3,4,4,4,5,4,6,5,1), 
  2 , CASE( MOD( Date_P3_Screened__c - P3_received_date__c,7),1,2,2,3,3,3,4,3,5,4,6,5,1), 
  3 , CASE( MOD( Date_P3_Screened__c - P3_received_date__c,7),1,2,2,2,3,2,4,3,5,4,6,5,1), 
  4 , CASE( MOD( Date_P3_Screened__c - P3_received_date__c,7),1,1,2,1,3,2,4,3,5,4,6,5,1), 
  5 , CASE( MOD( Date_P3_Screened__c - P3_received_date__c,7),1,0,2,1,3,2,4,3,5,4,6,5,0), 
  6 , CASE( MOD( Date_P3_Screened__c - P3_received_date__c,7),1,1,2,2,3,3,4,4,5,5,6,5,0), 
  999) 
  + 
  (FLOOR(( Date_P3_Screened__c-  P3_received_date__c)/7)*5) - 1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is the business days between when a P3 was received and when it was screened</inlineHelpText>
        <label>Days taken to screen MASI</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ddd_new_SW_Staffing_Notes__c</fullName>
        <label>Add new SW Staffing Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Details_of_Heart_blood_issues__c</fullName>
        <label>Details of Heart/blood issues</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Details_of_Statement_of_SEN__c</fullName>
        <label>Details of Statement of SEN</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Details_of_bladder_urinary_problems__c</fullName>
        <label>Details of bladder/urinary problems</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Details_of_criminal_record__c</fullName>
        <label>Details of criminal record</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Details_of_difficulty_ahering_to_rules__c</fullName>
        <label>Details of difficulty ahering to rules</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Details_of_eating_disorder__c</fullName>
        <label>Details of eating disorder</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Details_of_infectious_diseases__c</fullName>
        <label>Details of infectious diseases</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Details_of_injury_s__c</fullName>
        <description>What was the injury or injuries and when did it occur?</description>
        <label>Details of injury(s)</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Details_of_level_of_English__c</fullName>
        <label>Details of level of English</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Details_of_mental_heath_condition__c</fullName>
        <label>Details of mental heath condition</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Details_of_other_blood_disorders__c</fullName>
        <label>Details of other blood disorders</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Details_of_other_learning_difficulties__c</fullName>
        <label>Details of other learning difficulties</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Details_of_other_logistical_needs__c</fullName>
        <label>Details of other logistical needs</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Details_of_personal_care_night_support__c</fullName>
        <label>Details of personal care/night support</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Details_of_physical__c</fullName>
        <label>Details of physical disability</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Details_of_police_caution__c</fullName>
        <label>Details of police caution</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Details_of_prescribed_medications__c</fullName>
        <label>Details of prescribed medications</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Details_of_restricted_mobility__c</fullName>
        <label>Details of restricted mobility</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Details_of_stomach_digestive_abdominal__c</fullName>
        <label>Details of Stomach/digest/abdom problems</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Details_of_substance_abuse__c</fullName>
        <label>Details of substance abuse</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Details_of_visual_empairement__c</fullName>
        <label>Details of visual impairment</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Diabetes_CCT_notes__c</fullName>
        <label>Diabetes CS notes</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>OK (AC)</fullName>
                </value>
                <value>
                    <fullName>OK (CCT checked)</fullName>
                </value>
                <value>
                    <fullName>OK (CCT called)</fullName>
                </value>
                <value>
                    <fullName>OK (Inclusion letter sent)</fullName>
                </value>
                <value>
                    <fullName>CHECK</fullName>
                </value>
                <value>
                    <fullName>CALL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Diabetes_Self_Managed__c</fullName>
        <label>Diabetes Self Managed?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Diabetes_consent__c</fullName>
        <label>Diabetes consent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Diabetes_status__c</fullName>
        <formula>IF(
ISPICKVAL( Diabetes_CCT_notes__c ,&quot;OK (AC)&quot;),&quot;OK&quot;,
IF(
NOT(ISBLANK( Diabetes_consent__c )),&quot;CHECK - CONSENT RECEIVED, FINAL CHECKS&quot;,
IF(
ISPICKVAL( Diabetes_CCT_notes__c ,&quot;OK (Inclusion letter sent)&quot;),&quot;CHECK - INCLUSION LETTER SENT&quot;,
IF(
ISPICKVAL( Emergency_diabetes_medication__c , &quot;Yes&quot; ),&quot;CHECK - SEND INCLUSION LETTER&quot;,
IF(
OR(
ISPICKVAL(Does_the_YP_have_diabetes__c ,&quot;&quot;),ISPICKVAL(Does_the_YP_have_diabetes__c ,&quot;Yes&quot;)),
&quot;CHECK&quot;,&quot;OK&quot;)))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Diabetes status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Diabetes_type__c</fullName>
        <label>Diabetes type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Type 1</fullName>
                </value>
                <value>
                    <fullName>Type 2</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Dietary_CCT_notes__c</fullName>
        <label>Dietary CS notes</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>OK (AC)</fullName>
                </value>
                <value>
                    <fullName>OK (CCT checked)</fullName>
                </value>
                <value>
                    <fullName>OK (CCT called)</fullName>
                </value>
                <value>
                    <fullName>OK (Inclusion letter sent)</fullName>
                </value>
                <value>
                    <fullName>CHECK</fullName>
                </value>
                <value>
                    <fullName>CALL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Dietary_requirement_status__c</fullName>
        <formula>IF ( 
AND(
OR(
ISNULL(Special_Dietary_Requirements__c),
INCLUDES(Special_Dietary_Requirements__c , &quot;Other dietary requirements&quot;)
),
OR(
ISPICKVAL(Dietary_CCT_notes__c , &quot;&quot;),ISPICKVAL(Dietary_CCT_notes__c , &quot;CHECK&quot;),ISPICKVAL(Dietary_CCT_notes__c , &quot;CALL&quot;)
)
),&quot;CHECK&quot;,&quot;OK&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dietary requirement status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Difficulty_adhering_to_rules_boundaries__c</fullName>
        <label>Difficulty adhering to rules/boundaries</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Doctors_specialist_feedback_note_receive__c</fullName>
        <label>Doctors/specialist feedback note receive</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Does_YP_have_a_criminal_record__c</fullName>
        <label>Does YP have a criminal record</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Does_the_YP_have_Asthma__c</fullName>
        <label>Does the YP have Asthma</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Does_the_YP_have_diabetes__c</fullName>
        <label>Does the YP have diabetes</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Does_the_YP_take_medication_for_migraine__c</fullName>
        <label>Does YP take medication for migraines</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Does_the_YP_use_an_inhaler__c</fullName>
        <label>Does the YP use an inhaler</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Drs_treatment_CCT_notes__c</fullName>
        <label>Drs treatment CS notes</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>OK (AC)</fullName>
                </value>
                <value>
                    <fullName>OK (CCT checked)</fullName>
                </value>
                <value>
                    <fullName>OK (CCT called)</fullName>
                </value>
                <value>
                    <fullName>OK (Inclusion letter sent)</fullName>
                </value>
                <value>
                    <fullName>CHECK</fullName>
                </value>
                <value>
                    <fullName>CALL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Drs_treatment_status__c</fullName>
        <formula>IF(
AND(
OR(
ISPICKVAL( YP_treated_by_Dr_in_past_2_years__c ,&quot;&quot;),
ISPICKVAL( YP_treated_by_Dr_in_past_2_years__c ,&quot;Yes&quot;)
),
OR(
ISPICKVAL( Drs_treatment_CCT_notes__c , &quot;&quot;),ISPICKVAL( Drs_treatment_CCT_notes__c , &quot;CHECK&quot;),ISPICKVAL( Drs_treatment_CCT_notes__c , &quot;CALL&quot;)
)
)
,&quot;CHECK&quot;,&quot;OK&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Drs treatment status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Due_date__c</fullName>
        <description>Populates when P3_received_date__c is not empty</description>
        <label>Due date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Eating_disorder_CCT_notes__c</fullName>
        <label>Eating disorder CS notes</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>OK (AC)</fullName>
                </value>
                <value>
                    <fullName>OK (CCT checked)</fullName>
                </value>
                <value>
                    <fullName>OK (CCT called)</fullName>
                </value>
                <value>
                    <fullName>OK (Inclusion letter sent)</fullName>
                </value>
                <value>
                    <fullName>CHECK</fullName>
                </value>
                <value>
                    <fullName>CALL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Eating_disorder__c</fullName>
        <label>Eating disorder</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Eating_disorder_history__c</fullName>
        <label>Eating disorder history</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Current</fullName>
                </value>
                <value>
                    <fullName>Happened more than one year ago</fullName>
                </value>
                <value>
                    <fullName>Recent (happened within the last year)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Eating_disorder_recovered__c</fullName>
        <label>Eating disorder recovered</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Eating_disorder_status__c</fullName>
        <formula>IF(AND(ISPICKVAL(Eating_disorder__c, &quot;No&quot;),ISPICKVAL( Seeing_professional_for_eating_disorder__c , &quot;&quot;) ), &quot;OK&quot;,
IF(
AND(OR(
ISPICKVAL( Seeing_professional_for_eating_disorder__c , &quot;No&quot;), ISPICKVAL( Seeing_professional_for_eating_disorder__c , &quot;Yes&quot;),  ISPICKVAL(Eating_disorder__c, &quot;Yes&quot;) ,ISPICKVAL(Eating_disorder__c, &quot;No&quot;)
)
,
OR(
ISPICKVAL( Eating_disorder_CCT_notes__c , &quot;&quot;),
ISPICKVAL( Eating_disorder_CCT_notes__c , &quot;CHECK&quot;),
ISPICKVAL( Eating_disorder_CCT_notes__c , &quot;CALL&quot;)
)
)
,&quot;CHECK&quot;,   
IF(ISPICKVAL( Eating_disorder__c ,&quot;&quot;)
,&quot;CHECK&quot;,
&quot;OK&quot;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Eating disorder status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Emergency_diabetes_medication__c</fullName>
        <label>Emergency diabetes medication</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Epi_pen_for_food_allergy__c</fullName>
        <description>Dos the young person have an Epi Pen for this allergy?</description>
        <label>Epi pen for food allergy</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Epi_pen_for_other_allergy__c</fullName>
        <description>Do you carry an epi pen for your non-food allergy?</description>
        <label>Epi pen for Non-food allergy</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Epi_pen_required__c</fullName>
        <formula>IF(
OR(
ISPICKVAL( Epi_pen_for_food_allergy__c , &quot;Yes&quot;),
ISPICKVAL( Epi_pen_for_other_allergy__c, &quot;Yes&quot;)
)
,&quot;Yes&quot;,&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Epi pen required?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Epilepsy_CCT_notes__c</fullName>
        <label>Epilepsy CS notes</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>OK (AC)</fullName>
                </value>
                <value>
                    <fullName>OK (CCT checked)</fullName>
                </value>
                <value>
                    <fullName>OK (CCT called)</fullName>
                </value>
                <value>
                    <fullName>OK (Inclusion letter sent)</fullName>
                </value>
                <value>
                    <fullName>CHECK</fullName>
                </value>
                <value>
                    <fullName>CALL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Epilepsy_notes__c</fullName>
        <label>Epilepsy notes</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Epilepsy_status__c</fullName>
        <formula>IF(
AND(
OR(
ISPICKVAL(history_of_epilepsy__c , &quot;&quot;),
ISPICKVAL( history_of_epilepsy__c , &quot;Yes&quot;)
),
OR(
ISPICKVAL( Epilepsy_CCT_notes__c , &quot;&quot;),ISPICKVAL( Epilepsy_CCT_notes__c , &quot;CHECK&quot;),ISPICKVAL( Epilepsy_CCT_notes__c , &quot;CALL&quot;)
)
)
,&quot;CHECK&quot;,&quot;OK&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Epilepsy status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Essential_skills_needed__c</fullName>
        <description>case no.00084270</description>
        <label>Essential skills  needed</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Administer medication</fullName>
                </value>
                <value>
                    <fullName>Disburse medication</fullName>
                </value>
                <value>
                    <fullName>Emergency medication</fullName>
                </value>
                <value>
                    <fullName>Epilepsy Rescue medication</fullName>
                </value>
                <value>
                    <fullName>First aid training</fullName>
                </value>
                <value>
                    <fullName>Hold medication</fullName>
                </value>
                <value>
                    <fullName>Manual lifting</fullName>
                </value>
                <value>
                    <fullName>Prepare medication</fullName>
                </value>
                <value>
                    <fullName>Uses a hoist</fullName>
                </value>
                <value>
                    <fullName>Uses BSL</fullName>
                </value>
                <value>
                    <fullName>Uses Makaton</fullName>
                </value>
                <value>
                    <fullName>Uses PECs</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ethnicity__c</fullName>
        <label>Ethnicity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>White British</fullName>
                </value>
                <value>
                    <fullName>Irish</fullName>
                </value>
                <value>
                    <fullName>Traveller of Irish heritage</fullName>
                </value>
                <value>
                    <fullName>Gypsy/ Roma</fullName>
                </value>
                <value>
                    <fullName>Any other White background</fullName>
                </value>
                <value>
                    <fullName>White and Black Caribbean</fullName>
                </value>
                <value>
                    <fullName>White and Black African</fullName>
                </value>
                <value>
                    <fullName>White and Asian</fullName>
                </value>
                <value>
                    <fullName>Any other Mixed background</fullName>
                </value>
                <value>
                    <fullName>Indian</fullName>
                </value>
                <value>
                    <fullName>Pakistani</fullName>
                </value>
                <value>
                    <fullName>Bangladeshi</fullName>
                </value>
                <value>
                    <fullName>Any other Asian background</fullName>
                </value>
                <value>
                    <fullName>Black Caribbean</fullName>
                </value>
                <value>
                    <fullName>Black African</fullName>
                </value>
                <value>
                    <fullName>Any other Black background</fullName>
                </value>
                <value>
                    <fullName>Chinese</fullName>
                </value>
                <value>
                    <fullName>Prefer not to say</fullName>
                </value>
                <value>
                    <fullName>Any other ethnic group</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Fainting_status__c</fullName>
        <formula>IF(
AND(
NOT( INCLUDES(History_of_Seizures__c, &quot;None&quot;) ),
OR(
ISPICKVAL(  fainting_CCT_notes__c , &quot;&quot;),ISPICKVAL(  fainting_CCT_notes__c , &quot;CALL&quot;),ISPICKVAL(  fainting_CCT_notes__c , &quot;CHECK&quot;)
)
)
,&quot;CHECK&quot;,&quot;OK&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fainting status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Faith_Religion__c</fullName>
        <label>Faith/Religion</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Christian</fullName>
                </value>
                <value>
                    <fullName>Buddhist</fullName>
                </value>
                <value>
                    <fullName>Hindu</fullName>
                </value>
                <value>
                    <fullName>Sikh</fullName>
                </value>
                <value>
                    <fullName>Jewish</fullName>
                </value>
                <value>
                    <fullName>Muslim</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Prefer not to say</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Fluent_English_CCT_notes__c</fullName>
        <label>Fluent English CS notes</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>OK (AC)</fullName>
                </value>
                <value>
                    <fullName>OK (CCT checked)</fullName>
                </value>
                <value>
                    <fullName>OK (CCT called)</fullName>
                </value>
                <value>
                    <fullName>OK (Inclusion letter sent)</fullName>
                </value>
                <value>
                    <fullName>CHECK</fullName>
                </value>
                <value>
                    <fullName>CALL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Fluent_English_status__c</fullName>
        <formula>IF(
AND(
OR(
ISPICKVAL(  Level_of_English__c  , &quot;Speaks and understands English to a basic level&quot;),
ISPICKVAL(  Level_of_English__c  , &quot;Young person does not speak English&quot;),
ISPICKVAL(  Level_of_English__c  , &quot;&quot;)
)
,
OR(
ISPICKVAL( Fluent_English_CCT_notes__c ,&quot;&quot;),
ISPICKVAL( Fluent_English_CCT_notes__c ,&quot;CHECK&quot;),
ISPICKVAL( Fluent_English_CCT_notes__c ,&quot;CALL&quot;)
)
)
,&quot;CHECK&quot;,&quot;OK&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fluent English status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Food_allergies_CCT_notes__c</fullName>
        <label>Food allergies CS notes</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>OK (AC)</fullName>
                </value>
                <value>
                    <fullName>OK (CCT checked)</fullName>
                </value>
                <value>
                    <fullName>OK (CCT Called)</fullName>
                </value>
                <value>
                    <fullName>OK (Inclusion letter sent)</fullName>
                </value>
                <value>
                    <fullName>CHECK</fullName>
                </value>
                <value>
                    <fullName>CALL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Food_allergies__c</fullName>
        <description>Is the YP allergic to any of the following foods?</description>
        <label>Food allergies</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Dairy</fullName>
                </value>
                <value>
                    <fullName>Eggs</fullName>
                </value>
                <value>
                    <fullName>Fish/Shellfish</fullName>
                </value>
                <value>
                    <fullName>Nuts</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>